# redtip

./: README.md  com.github.hahnavi.ketip.json  install-script.sh  meson.build  meson_options.txt
data/: com.github.hahnavi.ketip.appdata.xml.in  com.github.hahnavi.ketip.desktop.in  com.github.hahnavi.ketip.gschema.xml  ketip.gresource.xml  meson.build
data/icons/: meson.build
data/ui/: service_row.ui  window.ui
po/: POTFILES  id.po  redtip.pot
src/: app.vala  main.vala  meson.build  service.vala  service_row.vala  services_list_model.vala  systemd.vala  utils.vala  window.vala
